@@ -1,5 +1,8 @@
 2004-06-08  n1xt3r  <n1xt3r@bluefalcon>
 
+	* ChangeLog, nb: - (load_config): USR_DATADIR overrides NB_DATA_DIR.
+	- Added new --datadir option that specifies different data directory to use.
+
 	* plugins/archive/monthly/monthly-cal.sh, plugins/entry/entry_catlinks.sh, plugins/archive/master_index.sh, plugins/blog_links.sh, plugins/blog_status.sh, plugins/calendar.sh, plugins/list_entries.sh, plugins/rss.sh, default/templates/entry_links.htm, default/templates/month_links.htm, plugins/atom.sh, nb, ChangeLog:
 	- New variable NB_DATA_DIR, provides a more flexible data path.
 	- Set NB_DATA_DIR to BLOG_DIR/ARCHIVES by default.
